# python_tutorial

./: .gitignore  README.md  pyproject.toml
src/python_tutorial/: 100_Numpy_exercises.ipynb  spatial_vectorization.py
src/python_tutorial/numpy/: 100_Numpy_exercises.ipynb  answer.ipynb
src/python_tutorial/pandas/: pandas.ipynb
