[project]
name = "python-tutorial"
version = "1.0.0"
description = "python官网教程学习"
authors = [
    {name = "huqiwei",email = "huqiwei2021@163.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[project.urls]
repository = "https://github.com/huqiwei123/python-tutorial.git"

[project.scripts]
spatial_vectorization = 'python_tutorial.spatial_vectorization:main'

[tool.poetry]
packages = [{include = "python_tutorial", from = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
